--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,3 +4,32 @@
 
 @layer utilities {}
 
+.logo_tetx{
+    border: 1px solid #727272;
+    font-size: 15px;
+    font-weight:bold;
+    letter-spacing:1px;
+    color: #727272;
+    padding: 2px 8px;
+    background-color:#fff;
+    &:hover{
+        background-color: burlywood;
+    }
+    /*tailw寫法
+    <div class="text-[15px] font-bold tracking-[0.06em] text-[#727272] border border-solid border-[#727272]">
+    線上開課工具!</div>*/
+}
+
+.header_btn{
+    color: #333;
+    padding: 10px 20px;
+    border: 2px solid #f7b157;
+    font-weight: bold;
+    letter-spacing: 0.2em;
+    text-align: center;
+    border-radius: 50px;
+    &:hover{
+        background-color: aqua;
+        color: #fff;
+    }
+}
