--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,10 @@
 
 @layer utilities {}
 
+.uk-link-toggle:hover .uk-link, .uk-link:hover, a:hover {
+    text-decoration: none;
+}
+
 .logo_tetx{
     border: 1px solid #727272;
     font-size: 15px;
@@ -33,3 +37,5 @@
         color: #fff;
     }
 }
+
+
