--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,7 @@
     text-decoration: none;
 }
 
-.logo_tetx{
+.logo_text{
     border: 1px solid #727272;
     font-size: 15px;
     font-weight:bold;
@@ -38,4 +38,46 @@
     }
 }
 
+.plan_btn{
+  background-color: #ffdd3d;
+  padding: 10px 96px;
+  border-radius: 30px;
+  font-size: 22px;
+  font-weight: bold;
+  color: #000;
+  border: 4px solid #fff;
+  letter-spacing: 0.5rem;
+  display: inline-block;
+  position: relative;
+  &:hover{
+    background-color: #ffec7f;
+    color: #000;
+  } 
+  &::before{
+    content: "→";
+    position: absolute;
+    right: 10px;
+    top: 8px;
+
+  }
+}
+
+@media (min-width:1024px){
+    #offcanvas-flip{
+        display: block;
+        position: static;
+        .uk-offcanvas-bar{
+            position: static;
+            width: auto;
+            padding: 0;
+            background-color: transparent;
+            .uk-offcanvas-close{
+                display: none;
+            }
+            a{
+                color: black;
+            }
+        }
+    } 
+}
 
