--- a/src/include/headerV2.ejs
+++ b/src/include/headerV2.ejs
@@ -3,34 +3,20 @@
       <img class="h-[32px]" src="img/logo-teaching.png" alt="">
       <div class="logo_text">線上開課工具!</div>
     </a>
-    <nav class="hidden lg:block mx-auto absolute top-[70px] w-full left-0 text-center lg:static lg:w-auto">
-      <a class="absolute top-[40px] right-[22px]" href="#"><img class="lg:hidden" src="img/icon_bars.svg" alt=""></a>
-      <ul class="flex lg:!flex gap-[15px] flex-col lg:flex-row">
-        <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">線上開課工具</a></li>
-        <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">功能特色</a></li>
-        <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">方案費用</a></li>
-        <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">客戶案例</a></li>
-        <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">關於我們</a></li>
-        <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">藍猴首頁</a></li>
-      </ul>
-    </nav>
-    <a class="ml-auto lg:hidden" href="#" uk-toggle="target: #offcanvas-overlay"><img src="img/icon_bars.svg" alt=""></a>
-    <a class="hidden lg:block header_btn" href="#">FREE! 開通試用</a>
-
-
-    <div id="offcanvas-overlay" uk-offcanvas="overlay: true">
+    <div class="mx-auto" id="offcanvas-flip" uk-offcanvas="flip: true; overlay: true">
         <div class="uk-offcanvas-bar">
-            <ul class="flex lg:!flex gap-[15px] flex-col lg:flex-row">
-                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">線上開課工具</a></li>
-                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">功能特色</a></li>
-                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">方案費用</a></li>
-                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">客戶案例</a></li>
-                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">關於我們</a></li>
-                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">藍猴首頁</a></li>
-              </ul>
+        <nav class=" absolute top-[70px] w-full left-0 text-center lg:static lg:w-auto">
+        <ul class="flex gap-[15px] flex-col lg:flex-row">
+            <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">線上開課工具</a></li>
+            <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">功能特色</a></li>
+            <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">方案費用</a></li>
+            <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">客戶案例</a></li>
+            <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">關於我們</a></li>
+            <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">藍猴首頁</a></li>
+        </ul>
+        </nav>
         </div>
-    </div>
-
+     </div>
+    <a class="ml-auto lg:hidden" href="#"  uk-toggle="target: #offcanvas-flip"><img src="img/icon_bars.svg" alt=""></a>
+    <a class="hidden lg:block header_btn" href="#">FREE! 開通試用</a>
   </header>
-
-  
