--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,8 +4,32 @@
 
 @layer utilities {}
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@900&display=swap');
+
+@font-face {
+	font-family: 'AbelRegular';
+           src: url('fonts/abel-regular-webfont.eot');
+           src: url('fonts/abel-regular-webfont.eot?#iefix') format('embedded-opentype'),  url('fonts/abel-regular-webfont.woff') format('woff'),  url('fonts/abel-regular-webfont.ttf') format('truetype'),  url('fonts/abel-regular-webfont.svg#AbelRegular') format('svg');
+     }
+
+
+
 .uk-link-toggle:hover .uk-link, .uk-link:hover, a:hover {
     text-decoration: none;
+}
+
+body{
+    font-family: 'Noto Sans TC',"Microsoft JhengHei", sans-serif;/*微軟正黑體語法*/
+    font-weight: 800;
+}
+
+.txtJL{
+    font-family: "AbelRegular" , sans-serif;
+    font-weight: none;
+}
+
+#header_ui .uk-active a{
+    color: #0693e3;
 }
 
 .logo_text{
@@ -188,3 +212,4 @@
 
     }
 }
+
